--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@ body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    
+    width: 100%;
 }
 
 .container {
     width: 100%;
     margin: 0 auto;
-    padding: 20px;
+    padding: 10px;
 
 }
 
@@ -21,7 +21,11 @@ body {
     position: relative;
     background-color: #f86c42;
     height: 600px;
-
+    width: 98%;
+    border-radius: 50px;
+}
+.header h1{
+    margin-top: 30px;
 }
 
 .header form{
@@ -37,6 +41,15 @@ label {
     display: block;
     margin-bottom: 10px;
     font-weight: bold;
+}
+select{
+     
+    width: 80%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-bottom: 20px;
 }
 input[type="text"],
         input[type="date"] {
@@ -82,31 +95,29 @@ button:hover{
 }
 
 .showcase {
-    position: relative;
     margin-top: 20px
 }
 
 .phone-image {
-    max-width: 100%;
-    height: 280px;
-    
-}
-
-.watch-image {
-    position: absolute;
-    bottom: -20px;
-    float:left;
-    max-width: 30%;
-    height: 150px;
-    margin-left: -90px;
+    max-width: 300px;
+    height: 350px;
+    float:right;
+    margin-top: 50px;
+    margin-right: 100px;
+    border-radius: 10px;
 }
 
 .activities {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    
 }
+h3{
+    text-align: center;
+    color: #333;
 
+}
 .action{
     text-align: center;
     margin: 20px;
